--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+relm4 = { version = "0.4.1", features = ["libadwaita", "macros"] }
+toml_edit = { version = "0.13.3" }
