--- a/meson.build
+++ b/meson.build
@@ -16,7 +16,9 @@ bindir = prefix / get_option('bindir')
 datadir = prefix / get_option('datadir')
 pkgdatadir = datadir / meson.project_name()
 pythondir = python.find_installation('python3').get_install_dir()
+localedir = join_paths(prefix, get_option('localedir'))
 
 install_subdir(meson.project_name(), install_dir: pythondir)
 subdir('bin')
 subdir('data')
+subdir('po')
